--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,10 @@
--r requirements/prod.txt
+Django==1.5
+dj-database-url==0.3.0
+dj-static==0.0.5
+django-bootstrap3==4.4.1
+django-toolbelt==0.0.1
+gunicorn==18.0
+psycopg2==2.5.3
+pystache==0.5.4
+static==1.0.2
+wsgiref==0.1.2
